using System.Collections;
using System.Collections.Generic;
using UnityEngine;

[CreateAssetMenu(fileName = "New data Item Effect", menuName = "Data/Item Effect")]
public class ItemEffect_SO : ScriptableObject
{
    public virtual void ExecuteEffect(Transform _target)
    {
        Debug.Log("Execute Effect");
    }
}
